--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Салюты</title>
-        <link rel="stylesheet"href="style.ccs/">
+        <link rel="stylesheet" href="style.ccs"/>
     </head>
     <body>
         <header>
